Moving and extracting documentation

--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,14 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 2s linear;
   height: 80px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-color: #2c3e50;
+  height: 250px;
+  padding: 200px;
   color: white;
 }
 
